feat: status update (#74)
